--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -3,9 +3,9 @@
 # In Streamlit Cloud, add these as secrets in the app settings
 
 # Neo4j Configuration
-NEO4J_URI = "neo4j://your-neo4j-host:7687"
+NEO4J_URI = "neo4j+s://your-instance-id.databases.neo4j.io"
 NEO4J_USERNAME = "neo4j"
-NEO4J_PASSWORD = "your-neo4j-password"
+NEO4J_PASSWORD = "your-generated-password"
 
 # OpenAI Configuration
 OPENAI_API_KEY = "your-openai-api-key"
